--- a/Elevação, Ar, IBGE e Clima/index.html
+++ b/Elevação, Ar, IBGE e Clima/index.html
@@ -8,7 +8,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDeLlEa_PZ0mJ2DivU0uYAjoWKvYhBPgM&libraries=maps,marker,elevation"
+      src="https://maps.googleapis.com/maps/api/js?key=Sua_Chave&libraries=maps,marker,elevation"
     ></script>
     <script src="map.js"></script>
     <script src="elevation.js"></script>
